--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express-jwt": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.14"
   },
   "devDependencies": {},
