--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,4 @@
 {
     "secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
-    "url":"http://localhost:3000"
+    "url":"https://sutafrontend.herokuapp.com/"
 }
