--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-jwt": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "nodemailer": "^6.7.2",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "razorpay": "^2.8.0"
   },
   "devDependencies": {},
   "scripts": {
